tests/vendor/invalid/syntax/goto_without_label.c
//tags: simple, goto
int main() {
    goto;
lbl:
    return 0;
}